<resources>
    <string name="app_name">RcGraphSystem</string>
    <string name="home_get_data">Get data</string>
    <string name="home_saved">Saved</string>
    <string name="home_settings">Settings</string>
    <string name="home_graph">Graph</string>
    <string name="search">Search Devices</string>
    <string name="cancel">Cancel</string>
    <string name="discovered_devices">Discovered Devices</string>
    <string name="paired_devices">Paired Devices</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="bluetooth_not_connected">Not Connected</string>
    <string name="bluetooth_settings">Bluetooth Settings</string>
    <string name="advanced_terminal">Shortcuts</string>
    <string name="searching_devices">Searching devices…(Advertisement)</string>
    <string name="connecting">Connecting…</string>
    <string name="configure_your_button">Configure your button</string>
    <string name="save">Save</string>
    <string name="device_not_support_bt">Your device don\'t support bluetooth. Try to install this application on the other smartphone.</string>
    <string name="close_app">Close application</string>
    <string name="delete_this_file">Do you want to delete this file?</string>
    <string name="delete_file_part">Do you want to delete</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="variable_separator_info">Variable separator</string>
    <string name="package_separator_info">Package separator</string>
    <string name="with_pin">Connection with PIN</string>
    <string name="without_pin">No PIN connection</string>
    <string name="bluetooth_connection_info">\'Connection with PIN\' will create pair with your device. While tying to connect you will get notification where you can enter PIN code.\n\'No PIN connection\' do not create pair with device so you will need to search it every time you want to connect.</string>
    <string name="open_graph">Open graph</string>
    <string name="edit_file">Edit file</string>
    <string name="delete_file">Delete file</string>
    <string name="arduino_configuration">Arduino configuration</string>
    <string name="communication_configuration">Communication configuration</string>
    <string name="extra_sign_settings">Add sign at the end of request</string>
    <string name="edit_file_name">Edit file name</string>
    <string name="license">License</string>
    <string name="additional_information">Additional information</string>
    <string name="set_default">Set default</string>
    <string name="set_arduino_default_dialog">Do you want to set arduino configuration as default?</string>
    <string name="set_communication_default_dialog">Do you want to set communication configuration as default?</string>
    <string name="list_of_files">List of files</string>
    <string name="download_started">Download started</string>
    <string name="select_file">Select file</string>
    <string name="data_value">Data Values</string>
    <string name="time">Time</string>
    <string name="height_above_ground">Height above ground</string>
    <string name="low_pass_altitude">Low pass altitude</string>
    <string name="pressure">Pressure</string>
    <string name="temperature">Temperature</string>
    <string name="terminal">Terminal</string>
    <string name="show_file_list">Show file list after download</string>
    <string name="separator_need_to_be_different">Separator cannot be the same as the other</string>
    <string name="button_label">Button label</string>
    <string name="your_query">Your query</string>
    <string name="no_axis">Without chart</string>
    <string name="axis_y_one">Set as first chart</string>
    <string name="axis_y_two">Set as second chart</string>
    <string name="terminal_hint_message">Hello, It\'s your terminal here :)</string>
    <string name="query">Query:</string>
    <string name="not_compatible">Phone not compatible</string>
    <string name="extra_sign">Extra sign</string>

</resources>
