<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/default_dimen">

    <TextView
        android:id="@+id/text_open_graph"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:padding="@dimen/default_dimen"
        android:text="@string/open_graph"
        android:textColor="@color/colorPrimaryVariant"
        android:textSize="@dimen/text_size_medium" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/colorAccent" />

    <TextView
        android:id="@+id/text_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:padding="@dimen/default_dimen"
        android:text="@string/edit_file"
        android:textColor="@color/colorPrimaryVariant"
        android:textSize="@dimen/text_size_medium" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/colorAccent" />

    <TextView
        android:id="@+id/text_edit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:padding="@dimen/default_dimen"
        android:text="@string/edit_file_name"
        android:textColor="@color/colorPrimaryVariant"
        android:textSize="@dimen/text_size_medium" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/colorAccent" />

    <TextView
        android:id="@+id/text_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:padding="@dimen/default_dimen"
        android:text="@string/delete_file"
        android:textColor="@color/colorPrimaryVariant"
        android:textSize="@dimen/text_size_medium" />
</LinearLayout>