<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_title_background"
        android:elevation="8dp"
        android:gravity="center"
        android:padding="@dimen/default_dimen"
        android:text="@string/configure_your_button"
        android:textColor="@android:color/white"
        android:translationZ="1dp" />

    <RelativeLayout
        android:id="@+id/root_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_dialog_title">

        <TextView
            android:id="@+id/tv_label_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:paddingEnd="@dimen/micro_dimen"
            android:paddingStart="@dimen/medium_dimen"
            android:paddingTop="@dimen/micro_dimen"
            android:text="@string/button_label"
            android:textColor="@color/colorAccent" />

        <EditText
            android:id="@+id/et_button_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="-10dp"
            android:layout_below="@+id/tv_label_info"
            android:layout_marginEnd="@dimen/small_dimen"
            android:layout_marginStart="@dimen/small_dimen"
            android:gravity="center_vertical"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:lines="1"
            android:maxLines="1"
            android:nextFocusForward="@+id/et_button_command"
            android:textColor="@color/colorPrimaryVariant"
            tools:ignore="LabelFor,TextFields"
            tools:text="Get folders" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/root_command"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_dimen"
        android:layout_below="@+id/root_label">

        <TextView
            android:id="@+id/tv_command_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:gravity="center"
            android:paddingEnd="@dimen/micro_dimen"
            android:paddingStart="@dimen/medium_dimen"
            android:paddingTop="@dimen/micro_dimen"
            android:text="@string/your_query"
            android:textColor="@color/colorAccent" />

        <EditText
            android:id="@+id/et_button_command"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"  android:layout_marginTop="-10dp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tv_command_info"
            android:layout_marginEnd="@dimen/small_dimen"
            android:layout_marginStart="@dimen/small_dimen"
            android:maxLines="3"
            android:textColor="@color/colorPrimaryVariant"
            tools:ignore="LabelFor,TextFields"
            tools:text="0?\n" />
    </RelativeLayout>

    <android.support.v7.widget.CardView
        android:id="@+id/root_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/root_command"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/default_dimen"
        app:cardCornerRadius="8dp">

        <Button
            android:id="@+id/bt_save"
            style="@style/CommandButtons"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawablePadding="@dimen/small_dimen"
            android:drawableStart="@drawable/ic_save_24dp"
            android:paddingBottom="@dimen/medium_dimen"
            android:paddingEnd="@dimen/double_default_dimen"
            android:paddingStart="@dimen/double_default_dimen"
            android:paddingTop="@dimen/medium_dimen"
            android:text="@string/save" />
    </android.support.v7.widget.CardView>

</RelativeLayout>