<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/root_input_text"
        android:layout_alignParentTop="true"
        android:fillViewport="true">

        <TextView
            android:id="@+id/tv_terminal_communication_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccentVariant"
            android:gravity="bottom"
            android:hint="@string/terminal_hint_message"
            android:lineSpacingExtra="@dimen/small_dimen"
            android:padding="@dimen/default_dimen"
            android:scrollbars="vertical"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="@dimen/text_size_small" />
    </ScrollView>

    <RelativeLayout
        android:id="@+id/root_input_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/root_check_box">

        <TextView
            android:id="@+id/tv_type_here_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/et_enter_command_area"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/et_enter_command_area"
            android:gravity="center_vertical"
            android:padding="@dimen/small_dimen"
            android:text="@string/query"
            android:textColor="@color/colorPrimaryVariant" />

        <EditText
            android:id="@+id/et_enter_command_area"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/tv_type_here_info"
            android:layout_toStartOf="@+id/iv_send_command"
            tools:ignore="LabelFor,TextFields" />

        <ImageView
            android:id="@+id/iv_send_command"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/et_enter_command_area"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@+id/et_enter_command_area"
            android:src="@android:drawable/ic_menu_send"
            tools:ignore="ContentDescription" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/root_check_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="?android:attr/selectableItemBackground">

        <TextView
            android:id="@+id/text_extra_sign_file_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/check_extra_sign"
            android:ellipsize="end"
            android:maxLines="1"
            android:padding="@dimen/default_dimen"
            android:text="@string/extra_sign_settings"
            android:textColor="@color/colorPrimaryVariant" />

        <CheckBox
            android:id="@+id/check_extra_sign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:padding="@dimen/default_dimen" />
    </RelativeLayout>
</RelativeLayout>
