<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <TextView
        android:id="@+id/text_dialog_title_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/small_dimen"
        android:layout_marginStart="@dimen/small_dimen"
        android:layout_marginTop="@dimen/small_dimen"
        android:background="@drawable/info_drawable"
        android:paddingBottom="@dimen/small_dimen"
        android:paddingEnd="@dimen/default_dimen"
        android:paddingStart="@dimen/default_dimen"
        android:paddingTop="@dimen/small_dimen"
        android:text="@string/bluetooth_settings"
        android:textColor="@android:color/white" />

    <RelativeLayout
        android:id="@+id/rl_bluetooth_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_dialog_title_info"
        android:layout_marginBottom="@dimen/small_dimen"
        android:layout_marginEnd="@dimen/small_dimen"
        android:layout_marginStart="@dimen/small_dimen"
        android:background="@drawable/border_primary_color">

        <TextView
            android:id="@+id/tv_bluetooth_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/switch_bluetooth"
            android:padding="@dimen/default_dimen"
            android:text="@string/bluetooth"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_default" />

        <Switch
            android:id="@+id/switch_bluetooth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/tv_bluetooth_switch"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@+id/tv_bluetooth_switch"
            android:padding="@dimen/default_dimen"
            android:theme="@style/SCBSwitch" />

    </RelativeLayout>

    <TextView
        android:id="@+id/tv_device_list_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_bluetooth_switch"
        android:layout_marginEnd="@dimen/small_dimen"
        android:layout_marginStart="@dimen/small_dimen"
        android:background="@drawable/elevation_drawable"
        android:elevation="4dp"
        android:paddingBottom="@dimen/small_dimen"
        android:paddingEnd="@dimen/default_dimen"
        android:paddingStart="@dimen/default_dimen"
        android:paddingTop="@dimen/small_dimen"
        android:text="@string/paired_devices"
        android:textColor="@android:color/white" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_paired_devices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/root_search_device"
        android:layout_below="@+id/tv_device_list_info"
        android:layout_marginEnd="@dimen/small_dimen"
        android:layout_marginStart="@dimen/small_dimen" />

    <android.support.v7.widget.CardView
        android:id="@+id/root_search_device"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/default_dimen"
        app:cardCornerRadius="8dp">

        <Button
            android:id="@+id/bt_search_device"
            style="@style/CommandButtons"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawablePadding="@dimen/small_dimen"
            android:drawableStart="@drawable/ic_autorenew_24dp"
            android:paddingBottom="@dimen/medium_dimen"
            android:paddingEnd="@dimen/double_default_dimen"
            android:paddingStart="@dimen/double_default_dimen"
            android:paddingTop="@dimen/medium_dimen"
            android:text="@string/search" />
    </android.support.v7.widget.CardView>

    <View
        android:id="@+id/view_disable_recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tv_device_list_info"
        android:background="#00000000"
        android:clickable="true"
        android:focusable="true"
        android:visibility="gone"
        tools:visibility="visible" />

    <ProgressBar
        android:id="@+id/pb_connecting_paired"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_above="@+id/root_search_device"
        android:layout_below="@+id/tv_device_list_info"
        android:layout_centerInParent="true"
        android:visibility="gone"
        tools:visibility="visible" />

</RelativeLayout>